Refactor CORS and NiceController for improved URL handling
- Updated `WebConfig` to utilize environment variables for CORS allowed origins, enhancing flexibility in configuration.
- Refactored `NiceController` to replace hardcoded URLs with dynamically constructed URLs based on environment variables, improving maintainability.
- Enhanced error handling in `NiceController` to use `Collections.singletonMap` for consistent response formatting.
- Updated application configuration files to reflect changes in frontend redirect paths for NICE verification.